--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,7 @@
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
 
 # AI Configuration
 ANTHROPIC_API_KEY=
-GROQ_API_KEY=
-
-# Chrome Extension ID
-NEXT_PUBLIC_EXTENSION_ID=
-
-# App Configuration
-NEXT_PUBLIC_APP_URL=
-
-# Stripe Configuration
-STRIPE_API_KEY=
-STRIPE_PRICE_ID=
-STRIPE_WEBHOOK_SECRET=
+DEEPSEEK_API_KEY=
